--- a/index.html
+++ b/index.html
@@ -18,54 +18,59 @@
 
   <title>Fundación Hemotuc</title>
 
-    <!-- Keywords -->
-  <meta name="keywords" content="fundacion, hemtouc, fundación, donación, sangre, tucuman, tucumán, hemato, oncológicas, leucemia, medula, vida, salvar, enfermedades,">
-  
+  <!-- Keywords -->
+  <meta name="keywords"
+    content="fundacion, hemtouc, fundación, donación, sangre, tucuman, tucumán, hemato, oncológicas, leucemia, medula, vida, salvar, enfermedades,">
+
   <!-- Description -->
-  <meta name="description" content="» Hemotuc es la Fundación para el Estudio y lucha De Enfermedades Hemato-oncológicas">
+  <meta name="description"
+    content="» Hemotuc es la Fundación para el Estudio y lucha De Enfermedades Hemato-oncológicas">
 
 </head>
 
-<body><body class="gridBody">
+<body>
 
-  <!-- Header -->
-  
-  <header>
-              <nav class="navbar navbar-expand-lg navbar-light header__navStyle">
-                <div class="container-fluid p-3">
-                  <a class="navbar-brand" href="./index.html"> <img src="./multimedia/svg/Logo_Foundation.svg"
-                      alt="FundaciónHemotuc"></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Voluntariado</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./contact.html">Contacto</a>
-                      </li>
-                    </ul>
-                    <ul class="nav nav-pills">
-                      <li><a href="./donar.html" class="nav__button">Donar</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-            </header>
-            
-    
+  <body class="gridBody">
 
-<!-- Main -->
+    <!-- Header -->
+
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light header__navStyle">
+        <div class="container-fluid p-3">
+          <a class="navbar-brand" href="./index.html"> <img src="./multimedia/svg/Logo_Foundation.svg"
+              alt="FundaciónHemotuc"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Voluntariado</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./contact.html">Contacto</a>
+              </li>
+            </ul>
+            <ul class="nav nav-pills">
+              <li><a href="./donar.html" class="nav__button">Donar</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+
+
+    <!-- Main -->
 
     <main class="home__main">
       <div class="container_fluid ms-4 me-4 mt-5 mb-5">
@@ -79,8 +84,10 @@
           <div class="main__text col-lg-7 col-md-12 mt-3 mb-3">
             <h4 class="main__h3">BIENVENIDXS A <span class="main__h3--bold">HEMOTUC</span></h3>
               <h1 class="main__h1"> <span class="main__h1--red "> DONÁ SANGRE </span> Y SALVA HASTA 4 VIDAS</h1>
-              <p class="main__p .alignCenter d-flex">Fundación Hemotuc es una organización sin fines de lucro, dedicada a colaborar con el abordaje integral de la problemática de los pacientes que padecen enfermedades hemato-oncológicas.</p>
-              <button type="button" class="btn btn-primary rounded-pill text-white btn__custom">Más info  <img src="./multimedia/svg/icon__arrow--right.svg" alt=""></button>
+              <p class="main__p .alignCenter d-flex">Fundación Hemotuc es una organización sin fines de lucro, dedicada
+                a colaborar con el abordaje integral de la problemática de los pacientes que padecen enfermedades
+                hemato-oncológicas.</p>
+              <button type="button" class="btn__custom btn btn-primary rounded-pill text-white ">Más info</button>
           </div>
         </div>
       </div>
@@ -89,70 +96,148 @@
 
     <!-- Section-->
 
-  <section class="section__gray pt-5 pb-4">
-    <h2 class="text-center section__h2">Con tu ayuda podemos seguir <br>
-      <span class="section__h2--Tertiary"> persiguiendo sueños </span>
-    </h2>
+    <section class="section__gray pt-5 pb-4">
+      <h2 class="text-center section__h2">Con tu ayuda podemos seguir <br>
+        <span class="section__h2--Tertiary"> persiguiendo sueños </span>
+      </h2>
 
-    <div class="ms-auto me-auto row d-flex align-items-center justify-content-center pt-2 pb-2">
+      <div class="ms-auto me-auto row d-flex align-items-center justify-content-center pt-2 pb-2">
 
-      <!-- similCard 1 -->
-      <div class="mt-3 mb-4 col-lg-4 col-sm-12">
-        <div class="row justify-content-center">
-          <div class="col-12 d-flex justify-content-center">
-            <img class="img_fluid pt-2" src="./multimedia/svg/ilust__home--sectionGray1.svg" alt="">
-          </div>
-          <div class="col-12">
-            <div class="container mt-3">
-              <p class="card-text text-center"> Comunicate con nosotros, solicitá tu ficha y completala con tus datos
-              </p>
+        <!-- similCard 1 -->
+        <div class="mt-4 mb-4 col-lg-4 col-sm-12">
+          <div class="row justify-content-center">
+            <div class="col-12 d-flex justify-content-center">
+              <img class="img_fluid pt-2" src="./multimedia/svg/ilust__home--sectionGray1.svg" alt="">
+            </div>
+            <div class="col-12">
+              <div class="container mt-3">
+                <p class="card-text text-center"> Comunicate con nosotros, solicitá tu ficha y completala con tus datos
+                </p>
+              </div>
+            </div>
+            <div class="col-12 d-flex justify-content-center">
+              <div class="pleca mt-3"></div>
             </div>
           </div>
-          <div class="col-12 d-flex justify-content-center">
-            <div class="pleca mt-3"></div>
-          </div>
         </div>
-      </div>
 
-      <!-- similCard 1 -->
-      <div class="mt-3 mb-3 col-lg-4 col-sm-12">
-        <div class="row justify-content-center">
-          <div class="col-12 d-flex justify-content-center">
-            <img class="img_fluid pt-2" src="./multimedia/svg/ilust__home--sectionGray2.svg" alt="">
-          </div>
-          <div class="col-12">
-            <div class="container mt-3">
-              <p class="card-text text-center"> Elegí tu tipo de abono (mensual, 
-                anual, trimestral, bimensual)
-              </p>
+        <!-- similCard 1 -->
+        <div class="mt-4 mb-4 col-lg-4 col-sm-12">
+          <div class="row justify-content-center">
+            <div class="col-12 d-flex justify-content-center">
+              <img class="img_fluid pt-2" src="./multimedia/svg/ilust__home--sectionGray2.svg" alt="">
+            </div>
+            <div class="col-12">
+              <div class="container mt-3">
+                <p class="card-text text-center"> Elegí tu tipo de abono (mensual,
+                  anual, trimestral, bimensual)
+                </p>
+              </div>
+            </div>
+            <div class="col-12 d-flex justify-content-center">
+              <div class="pleca mt-3"></div>
             </div>
           </div>
-          <div class="col-12 d-flex justify-content-center">
-            <div class="pleca mt-3"></div>
-          </div>
         </div>
-      </div>
 
-      <!-- similCard 1 -->
-      <div class="mt-3 mb-3 col-lg-4 col-sm-12">
-        <div class="row justify-content-center">
-          <div class="col-12 d-flex justify-content-center">
-            <img class="img_fluid pt-2" src="./multimedia/svg/ilust__home--sectionGray3.svg" alt="">
-          </div>
-          <div class="col-12">
-            <div class="container mt-3">
-              <p class="card-text text-center"> Elegí tu forma de pago, tarjeta VISA, debito o te enviamos un cobrador
-              </p>
+        <!-- similCard 1 -->
+        <div class="mt-4 mb-4 col-lg-4 col-sm-12">
+          <div class="row justify-content-center">
+            <div class="col-12 d-flex justify-content-center">
+              <img class="img_fluid pt-2" src="./multimedia/svg/ilust__home--sectionGray3.svg" alt="">
+            </div>
+            <div class="col-12">
+              <div class="container mt-3">
+                <p class="card-text text-center"> Elegí tu forma de pago, tarjeta VISA, debito o te enviamos un cobrador
+                </p>
+              </div>
+            </div>
+            <div class="col-12 d-flex justify-content-center">
+              <div class="pleca mt-3"></div>
             </div>
           </div>
-          <div class="col-12 d-flex justify-content-center">
-            <div class="pleca mt-3"></div>
+        </div>
+
+    </section>
+
+    <!-- Article -->
+    <article class="article__white pt-5 pb-4">
+      <div class="container">
+        <h2 class="text-center article__h2"> <span class="article__h2--primary"> Requisitos para </span> <br>
+          donar sangre
+        </h2>
+
+
+        <div class="container-fluid pt-5">
+          <div class="row">
+
+            <!-- +18 -->
+            <div class="col-lg-4 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
+              <div class="article__cards">
+                <img src="./multimedia/svg/icon__adult.svg" alt="">
+                <div class="cards__p">
+                  Tener entre 18 y 65 años.
+                </div>
+              </div>
+            </div>
+
+          <!-- size -->
+            <div class="col-lg-4 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
+              <div class="article__cards">
+                <img src="./multimedia/svg/icon__size.svg" alt="">
+                <div class="cards__p">
+                  Pesar más de 50 kg.
+                </div>
+              </div>
+            </div>
+
+            <!-- calendar -->
+            <div class="col-lg-4 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
+              <div class="article__cards">
+                <img src="./multimedia/svg/icon__calendar.svg" alt="">
+                <div class="cards__p">
+                  No haber donado en los últimos 2 meses.
+                </div>
+              </div>
+            </div>
+
+              <!-- tattoo -->
+              <div class="col-lg-4 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
+                <div class="article__cards">
+                  <img src="./multimedia/svg/icon__tattoo.svg" alt="">
+                  <div class="cards__p">
+                    No haberse realizado tatuajes, perforaciones o cirugías en el último año.
+                  </div>
+                </div>
+              </div>
+
+              <!-- Condom -->
+              <div class="col-lg-4 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
+                <div class="article__cards">
+                  <img src="./multimedia/svg/icon__condom.svg" alt="">
+                  <div class="cards__p">
+                    No haber tenido sexo ocasional sin proteccción
+                  </div>
+                </div>
+              </div>
+
+              <!-- Coofee -->
+              <div class="col-lg-4 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
+                <div class="article__cards">
+                  <img src="./multimedia/svg/icon__coffee.svg" alt="">
+                  <div class="cards__p">
+                    Ayuno sólo de grasas y lácteos.
+                  </div>
+                </div>
+              </div>
+
           </div>
         </div>
-      </div>
-  </section>
-  
-</body>
+
+
+
+  </body>
+
 
 
 
@@ -164,6 +249,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
     integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
     crossorigin="anonymous"></script>
-<!-- </body> -->
+  <!-- </body> -->
 
 </html>
