--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
     <!-- Section-->
 
     <section class="section__gray pt-5 pb-4">
+      <div class="container">
       <h2 class="text-center section__h2">Con tu ayuda podemos seguir <br>
         <span class="section__h2--Tertiary"> persiguiendo sueños </span>
       </h2>
+    </div>
 
       <div class="ms-auto me-auto row d-flex align-items-center justify-content-center pt-2 pb-2">
 
@@ -121,7 +123,7 @@
           </div>
         </div>
 
-        <!-- similCard 1 -->
+        <!-- similCard 2 -->
         <div class="mt-4 mb-4 col-lg-4 col-sm-12">
           <div class="row justify-content-center">
             <div class="col-12 d-flex justify-content-center">
@@ -129,8 +131,8 @@
             </div>
             <div class="col-12">
               <div class="container mt-3">
-                <p class="card-text text-center"> Elegí tu tipo de abono (mensual,
-                  anual, trimestral, bimensual)
+                <p class="card-text text-center"> Elegí tu tipo de abono: mensual,
+                  anual, trimestral, bimestral
                 </p>
               </div>
             </div>
@@ -140,7 +142,7 @@
           </div>
         </div>
 
-        <!-- similCard 1 -->
+        <!-- similCard 3 -->
         <div class="mt-4 mb-4 col-lg-4 col-sm-12">
           <div class="row justify-content-center">
             <div class="col-12 d-flex justify-content-center">
@@ -148,7 +150,7 @@
             </div>
             <div class="col-12">
               <div class="container mt-3">
-                <p class="card-text text-center"> Elegí tu forma de pago, tarjeta VISA, debito o te enviamos un cobrador
+                <p class="card-text text-center"> Elegí tu forma de pago: efectivo, debito o mercado pago
                 </p>
               </div>
             </div>
@@ -168,7 +170,7 @@
         </h2>
 
 
-        <div class="container-fluid pt-5">
+        <div class="container-fluid m5">
           <div class="row">
 
             <!-- +18 -->
@@ -181,8 +183,8 @@
               </div>
             </div>
 
-          <!-- size -->
-            <div class="col-lg-4 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
+            <!-- size -->
+            <div class="col-lg-4 col-md-12 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
               <div class="article__cards">
                 <img src="./multimedia/svg/icon__size.svg" alt="">
                 <div class="cards__p">
@@ -192,7 +194,7 @@
             </div>
 
             <!-- calendar -->
-            <div class="col-lg-4 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
+            <div class="col-lg-4 col-md-12 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
               <div class="article__cards">
                 <img src="./multimedia/svg/icon__calendar.svg" alt="">
                 <div class="cards__p">
@@ -201,38 +203,70 @@
               </div>
             </div>
 
-              <!-- tattoo -->
-              <div class="col-lg-4 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
-                <div class="article__cards">
-                  <img src="./multimedia/svg/icon__tattoo.svg" alt="">
-                  <div class="cards__p">
-                    No haberse realizado tatuajes, perforaciones o cirugías en el último año.
-                  </div>
+            <!-- tattoo -->
+            <div class="col-lg-4 col-md-12 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
+              <div class="article__cards">
+                <img src="./multimedia/svg/icon__tattoo.svg" alt="">
+                <div class="cards__p">
+                  No haberse realizado tatuajes, perforaciones o cirugías en el último año.
                 </div>
               </div>
+            </div>
 
-              <!-- Condom -->
-              <div class="col-lg-4 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
-                <div class="article__cards">
-                  <img src="./multimedia/svg/icon__condom.svg" alt="">
-                  <div class="cards__p">
-                    No haber tenido sexo ocasional sin proteccción
-                  </div>
+            <!-- condom -->
+            <div class="col-lg-4 col-md-12 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
+              <div class="article__cards">
+                <img src="./multimedia/svg/icon__condom.svg" alt="">
+                <div class="cards__p">
+                  No haber tenido sexo ocasional sin proteccción
                 </div>
               </div>
+            </div>
 
-              <!-- Coofee -->
-              <div class="col-lg-4 col-sm-12 pt-3 pb-3 d-flex justify-content-center">
-                <div class="article__cards">
-                  <img src="./multimedia/svg/icon__coffee.svg" alt="">
-                  <div class="cards__p">
-                    Ayuno sólo de grasas y lácteos.
-                  </div>
+            <!-- cooffee -->
+            <div class="col-lg-4  col-sm-12 pt-3 pb-3 d-flex justify-content-center">
+              <div class="article__cards">
+                <img src="./multimedia/svg/icon__coffee.svg" alt="">
+                <div class="cards__p">
+                  Ayuno sólo de grasas y lácteos.
                 </div>
               </div>
-
+            </div>
           </div>
         </div>
+
+        <div class="container mt-5">
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 d-flex  justify-content-center preFooter">
+              <img src="./multimedia/svg/ilust__misc--l.svg" alt="<<" class="preFooter__misc--l">
+              <img src="./multimedia/svg/ilust__preFooter.svg" alt="hearts" class="preFooter__ilust">
+              <div class="article__yellowPill"> Ayudanos a seguir creciendo</div>
+              <img src="./multimedia/svg/Ilust__misc--r.svg" alt=">>" class="preFooter__misc--r">              
+            </div>
+          </div>
+        </div>
+    </article>
+
+    <!-- footer -->
+
+    <footer class="bottom mt-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3">
+            <img src="" alt="">
+            <div class="misc--white"></div>
+            <p></p>
+            <div class="footer___socialmedia">
+              <img src="" alt="">
+              <img src="" alt="">
+              <img src="" alt="">
+            </div>
+          </div>
+          <div class="col-lg-3"></div>
+          <div class="col-lg-6"></div>
+        </div>
+      </div>
+    </footer>
 
 
 
