--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 
     <section class="section__gray pt-5 pb-4">
       <div class="container">
-      <h2 class="text-center section__h2">Con tu ayuda podemos seguir <br>
-        <span class="section__h2--Tertiary"> persiguiendo sueños </span>
-      </h2>
-    </div>
+        <h2 class="text-center section__h2">Con tu ayuda podemos seguir <br>
+          <span class="section__h2--Tertiary"> persiguiendo sueños </span>
+        </h2>
+      </div>
 
       <div class="ms-auto me-auto row d-flex align-items-center justify-content-center pt-2 pb-2">
 
@@ -170,7 +170,7 @@
         </h2>
 
 
-        <div class="container-fluid m5">
+        <div class="container-fluid">
           <div class="row">
 
             <!-- +18 -->
@@ -238,10 +238,8 @@
         <div class="container mt-5">
           <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 d-flex  justify-content-center preFooter">
-              <img src="./multimedia/svg/ilust__misc--l.svg" alt="<<" class="preFooter__misc--l">
               <img src="./multimedia/svg/ilust__preFooter.svg" alt="hearts" class="preFooter__ilust">
               <div class="article__yellowPill"> Ayudanos a seguir creciendo</div>
-              <img src="./multimedia/svg/Ilust__misc--r.svg" alt=">>" class="preFooter__misc--r">              
             </div>
           </div>
         </div>
@@ -250,20 +248,39 @@
     <!-- footer -->
 
     <footer class="bottom mt-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <img src="" alt="">
-            <div class="misc--white"></div>
-            <p></p>
-            <div class="footer___socialmedia">
-              <img src="" alt="">
-              <img src="" alt="">
-              <img src="" alt="">
+      <div class="container mt-5 mb-4">
+        <div class="row d-flex align-items-center">
+          <div class="col-lg-3 col-md-12 col-sm-12 footer__col--l">
+            <div class="nombreFundacion">FUNDACIÓN <span class="nombreFundacion__bold">HEMOTUC</span> </div>
+            <div class="misc__white"></div>
+            <p class=" text-white ">Fundación Hemotuc es una organización ficticia creada como proyecto final del curso
+              de front-end de CoderHouse.</p>
+            <div class="footer___socialMedia">
+              <a href="#" class="me-1"><img src="./multimedia/svg/iconFacebook.svg" alt="facebook"></a>
+              <a href="#" class="ms-1 me-1"><img src="/multimedia/svg/iconInstagram.svg" alt="instagram"></a>
+              <a href="#" class="ms-1"><img src="/multimedia/svg/iconWhatsapp.svg" alt="whatsapp"></a>
             </div>
           </div>
-          <div class="col-lg-3"></div>
-          <div class="col-lg-6"></div>
+          <div class="col-lg-4 col-md-12 col-sm-12  footer__col--ctr">
+            <div class="footer__direction d-flex">
+              <img src="./multimedia/svg/iconMapMarker.svg" alt="">
+              <div class=" text-white ms-2">Calle N°452 - San Miguel de Tucumán</div>
+            </div>
+            <div class="footer__mail d-flex">
+              <img src="./multimedia/svg/iconMail.svg" alt="">
+              <div class=" text-white ms-2">fundacionhemotuc@gmail.com</div>
+            </div>
+          </div>
+          <div class="col-lg-5 col-md-12 col-sm-12 footer__col--r">
+            <ul class="footer__ul">
+              <li><a href="">Home</a></li>
+              <li><a href="">Nosotros</a></li>
+              <li><a href="">Voluntariado</a></li>
+              <li><a href="">Contacto</a></li>
+              <li><a href="">Donar</a></li>
+              
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
