--- a/contact.html
+++ b/contact.html
@@ -30,10 +30,11 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light header__navStyle">
     <div class="container-fluid p-3">
-      <a class="navbar-brand" href="./index.html"> <img src="./multimedia/svg/fundaciónFedeh-header-nav.svg"
-          alt="FundaciónFedeh"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="./index.html"> <img src="./multimedia/svg/Logo_Foundation.svg"
+          alt="FundaciónHemotuc"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -52,8 +53,7 @@
           </li>
         </ul>
         <ul class="nav nav-pills">
-          <li class="nav-item">
-            <button type="button" class="btn btn-primary rounded-pill">Donar</button>
+          <li><a href="./donar.html" class="nav__button">Donar</a>
           </li>
         </ul>
       </div>
@@ -64,28 +64,32 @@
 <!-- main -->
 <main class="contact__main d-flex justify-content-center align-content-center ">
         <div class="row ms-5 me-5 mt-4 mb-4 align-items-center">
-            <div class="col-lg-6">
-                <h2 class="main__h2"> <span class="main__h2--red"> Sit amet consectetur </span> adipiscing elit habitasse facilisi pharetra</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit habitasse facilisi pharetra, eu vestibulum
-                  torquent euismod. Eget sagittis iaculis interdum parturient est volutpat iaculis.</p></div>
+
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="container__contactPleca"><div class="contactPleca"></div></div>
+                <h2 class="main__h2"> <span class="main__h2--red"> Sé un héroe comunícate con nosotros y</span> sumate a nuestra lucha</h2>
+                <p>Selecciona en asunto el motivo de tu mensaje y responderemos a la brevedad. Somos Fundación Hemotuc y estamos para ayudarte.</p>
+                <div class="contact__main--marker"> <img src="./multimedia/svg/icon__marker--red.svg" alt="dirección" class="me-2"> Calle N°452 - San Miguel de Tucumán</div>
+                <div class="contact__main--phone"> <img src="./multimedia/svg/icon__phone--blue.svg" alt="dirección" class="me-2"> (0381) 4000-000 » Interno 559</div>
+              </div>
 
                 
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-12 col-sm-12 pt-4 pb-4">
                 <div class="container_fluid">
                     <form>
                         <fieldset>            
                           </div>
                           <div class="form-group">
                             <label for="Email">E-Mail</label>
-                            <input type="email" class="form-control" id="Email-1" aria-describedby="emailHelp" placeholder="Ingrese su mail">
+                            <input type="email" class="form-control form__customized " id="Email-1" aria-describedby="emailHelp" placeholder="Ingrese su mail">
                           </div>
                           <div class="form-group mt-3">
                             <label for="Nombre-1">Nombre</label>
-                            <input type="text" class="form-control" id="Nombre-1  " placeholder="Ingrese su nombre y apellido">
+                            <input type="text" class="form-control form__customized " id="Nombre-1  " placeholder="Ingrese su nombre y apellido">
                           </div>
                           <div class="form-group mt-3">
                             <label for="Asunto-1">Asunto</label>
-                            <select class="form-control" id="Asunto-1">
+                            <select class="form-control form__customized" id="Asunto-1">
                               <option>Donación</option>
                               <option>Sponsor</option>
                               <option>Voluntariado</option>
@@ -94,10 +98,12 @@
                           </div>
                           <div class="form-group mt-3">
                             <label for="exampleTex  tarea ">Escriba su mensaje</label>
-                            <textarea class="form-control" id="exampleTextarea" rows="6"></textarea>
+                            <textarea class="form-control form__customized--text" id="exampleTextarea" rows="6"></textarea>
                           </div>
                           </fieldset>
-                          <button type="submit" class="btn btn-primary rounded-pill mt-3">Enviar</button>
+                          <div class="container__btnSubmit">
+                          <button type="submit" class="nav__button mt-3">Enviar</button>
+                        </div>
                         </fieldset>
                       </form>
                 </div>
