fix2 index - contact

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -262,17 +262,23 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-12 col-sm-12  footer__col--ctr">
-            <div class="contact__main--marker"> <img src="./multimedia/svg/icon__marker--red.svg" alt="dirección" class="me-2"> Calle N°452 - San Miguel de Tucumán</div>
-                <div class="contact__main--phone"> <img src="./multimedia/svg/icon__phone--blue.svg" alt="dirección" class="me-2"> (0381) 4000-000 » Interno 559</div>
+            <div class="footer__direction d-flex">
+              <img src="./multimedia/svg/iconMapMarker.svg" alt="">
+              <div class=" text-white ms-2">Calle N°452 - San Miguel de Tucumán</div>
+            </div>
+            <div class="footer__mail d-flex">
+              <img src="./multimedia/svg/iconMail.svg" alt="">
+              <div class=" text-white ms-2">fundacionhemotuc@gmail.com</div>
+            </div>
           </div>
           <div class="col-lg-5 col-md-12 col-sm-12 footer__col--r">
-            <div class="footer__container--ul">
+            <div class="container__footer--ul">
             <ul class="footer__ul">
               <li><a href="">Home</a></li>
               <li><a href="">Nosotros</a></li>
               <li><a href="">Voluntariado</a></li>
               <li><a href="">Contacto</a></li>
-              <li><a href="">Donar</a></li>              
+              <li><a href="">Donar</a></li>
             </ul>
           </div>
           </div>
