--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
 
     <!-- footer -->
 
-    <footer class="bottom mt-4">
-      <div class="container mt-5 mb-4">
+    <footer class="bottom p-4">
+      <div class="container">
         <div class="row d-flex align-items-center">
           <div class="col-lg-3 col-md-12 col-sm-12 footer__col--l">
             <div class="nombreFundacion">FUNDACIÓN <span class="nombreFundacion__bold">HEMOTUC</span> </div>
@@ -285,6 +285,8 @@
         </div>
       </div>
     </footer>
+
+</body>
 
 
 
