--- a/index.html
+++ b/index.html
@@ -34,36 +34,19 @@
 
     <!-- Header -->
 
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light header__navStyle">
-        <div class="container-fluid p-3">
-          <a class="navbar-brand" href="./index.html"> <img src="./multimedia/svg/Logo_Foundation.svg"
-              alt="FundaciónHemotuc"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Voluntariado</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./contact.html">Contacto</a>
-              </li>
-            </ul>
-            <ul class="nav nav-pills">
-              <li><a href="./donar.html" class="nav__button">Donar</a>
-              </li>
-            </ul>
-          </div>
+    <header class="home__header">
+      <nav class="header__nav">
+        <div class="header__nav--logo">
+          <img src="./multimedia/svg/Logo_Foundation.svg" alt="Logotype">
+        </div>
+        <div class="container__nav--ul">
+          <ul class="header__nav--ul">
+            <li><a href="./index.html" class="ul__li">Home</a></li>
+            <li><a href="./nosotros.html" class="ul__li">Nosotros</a></li>
+            <li><a href="./voluntarios.html" class="ul__li">Voluntariado</a></li>
+            <li><a href="./contact.html" class="ul__li">Contacto</a></li>
+            <li><a href="./donar.html" class="nav__button"> Donar </button> </a>
+          </ul>
         </div>
       </nav>
     </header>
@@ -273,36 +256,34 @@
           </div>
           <div class="col-lg-5 col-md-12 col-sm-12 footer__col--r">
             <div class="container__footer--ul">
-            <ul class="footer__ul">
-              <li><a href="">Home</a></li>
-              <li><a href="">Nosotros</a></li>
-              <li><a href="">Voluntariado</a></li>
-              <li><a href="">Contacto</a></li>
-              <li><a href="">Donar</a></li>
-            </ul>
-          </div>
+              <ul class="footer__ul">
+                <li><a href="">Home</a></li>
+                <li><a href="">Nosotros</a></li>
+                <li><a href="">Voluntariado</a></li>
+                <li><a href="">Contacto</a></li>
+                <li><a href="">Donar</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </footer>
 
-</body>
-
-
-
   </body>
 
 
 
+</body>
 
 
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-    integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-    integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-    crossorigin="anonymous"></script>
-  <!-- </body> -->
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+  integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+  integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+<!-- </body> -->
 
 </html>
