--- a/contact.html
+++ b/contact.html
@@ -27,36 +27,19 @@
   <body>
 
 <!-- header -->
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light header__navStyle">
-    <div class="container-fluid p-3">
-      <a class="navbar-brand" href="./index.html"> <img src="./multimedia/svg/Logo_Foundation.svg"
-          alt="FundaciónHemotuc"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Voluntariado</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./contact.html">Contacto</a>
-          </li>
-        </ul>
-        <ul class="nav nav-pills">
-          <li><a href="./donar.html" class="nav__button">Donar</a>
-          </li>
-        </ul>
-      </div>
+<header class="home__header">
+  <nav class="header__nav">
+    <div class="header__nav--logo">
+      <img src="./multimedia/svg/Logo_Foundation.svg" alt="Logotype">
+    </div>
+    <div class="container__nav--ul">
+      <ul class="header__nav--ul">
+        <li><a href="./index.html" class="ul__li">Home</a></li>
+        <li><a href="./nosotros.html" class="ul__li">Nosotros</a></li>
+        <li><a href="./voluntarios.html" class="ul__li">Voluntariado</a></li>
+        <li><a href="./contact.html" class="ul__li">Contacto</a></li>
+        <li><a href="./donar.html" class="nav__button"> Donar </button> </a>
+      </ul>
     </div>
   </nav>
 </header>
