--- a/contacto.html
+++ b/contacto.html
@@ -37,7 +37,7 @@
         <li><a href="./index.html" class="ul__li">Home</a></li>
         <li><a href="./nosotros.html" class="ul__li">Nosotros</a></li>
         <li><a href="./voluntarios.html" class="ul__li">Voluntariado</a></li>
-        <li><a href="./contact.html" class="ul__li">Contacto</a></li>
+        <li><a href="./contacto.html" class="ul__li">Contacto</a></li>
         <li><a href="./donar.html" class="nav__button"> Donar </button> </a>
       </ul>
     </div>
