--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -43,7 +43,7 @@
           <ul class="header__nav--ul">
             <li><a href="./index.html" class="ul__li">Home</a></li>
             <li><a href="./nosotros.html" class="ul__li">Nosotros</a></li>
-            <li><a href="./voluntarios.html" class="ul__li">Voluntariado</a></li>
+            <li><a href="./voluntariado.html" class="ul__li">Voluntariado</a></li>
             <li><a href="./contacto.html" class="ul__li">Contacto</a></li>
             <li><a href="./donar.html" class="nav__button"> Donar </button> </a>
           </ul>
@@ -53,7 +53,7 @@
 
 
 
-    <!-- Main -->
+    <!-- main -->
 
     <main class="home__main">
       <div class="container_fluid ms-4 me-4 mt-5 mb-5">
@@ -77,7 +77,7 @@
     </main>
 
 
-    <!-- Section-->
+    <!-- section-->
 
     <section class="section__gray pt-5 pb-4">
       <div class="container">
@@ -145,7 +145,7 @@
 
     </section>
 
-    <!-- Article -->
+    <!-- article -->
     <article class="article__white pt-5 pb-4">
       <div class="container">
         <h2 class="text-center article__h2"> <span class="article__h2--primary"> Requisitos para </span> <br>
