--- a/contacto.html
+++ b/contacto.html
@@ -19,86 +19,98 @@
   <title>Contacto</title>
 
   <!-- Keywords -->
-  <meta name="keywords" content="contacto, san miguel de tucumán, fundacion, fundación, donación, sangre, tucuman, tucumán, hemato, oncológicas, leucemia, medula, vida, salvar, enfermedades,">
- 
+  <meta name="keywords"
+    content="contacto, san miguel de tucumán, fundacion, fundación, donación, sangre, tucuman, tucumán, hemato, oncológicas, leucemia, medula, vida, salvar, enfermedades,">
+
   <!-- Description -->
-  <meta name="description" content="Tu ayuda nos permite seguir persiguiendo sueños. Comunicate con nosotros para saber más">
+  <meta name="description"
+    content="Tu ayuda nos permite seguir persiguiendo sueños. Comunicate con nosotros para saber más">
 
-  <body>
+<body>
 
-<!-- header -->
-<header class="home__header">
-  <nav class="header__nav">
-    <div class="header__nav--logo">
-      <img src="./multimedia/svg/Logo_Foundation.svg" alt="Logotype">
-    </div>
-    <div class="container__nav--ul">
-      <ul class="header__nav--ul">
-        <li><a href="./index.html" class="ul__li">Home</a></li>
-        <li><a href="./nosotros.html" class="ul__li">Nosotros</a></li>
-        <li><a href="./voluntarios.html" class="ul__li">Voluntariado</a></li>
-        <li><a href="./contacto.html" class="ul__li">Contacto</a></li>
-        <li><a href="./donar.html" class="nav__button"> Donar </button> </a>
-      </ul>
-    </div>
-  </nav>
-</header>
+  <!-- header -->
 
-<!-- main -->
-<main class="contact__main d-flex justify-content-center align-content-center ">
-        <div class="row ms-5 me-5 mt-4 mb-4 align-items-center">
+  <header class="home__header">
+    <nav class="header__nav">
+      <div class="header__nav--logo">
+        <img src="./multimedia/svg/Logo_Foundation.svg" alt="Logotype">
+      </div>
+      <div class="container__nav--ul">
+        <ul class="header__nav--ul">
+          <li><a href="./index.html" class="ul__li">Home</a></li>
+          <li><a href="./nosotros.html" class="ul__li">Nosotros</a></li>
+          <li><a href="./voluntariado.html" class="ul__li">Voluntariado</a></li>
+          <li><a href="./contacto.html" class="ul__li">Contacto</a></li>
+          <li><a href="./donar.html" class="nav__button"> Donar </button> </a>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-            <div class="col-lg-6 col-md-12 col-sm-12">
-                <div class="container__contactPleca"><div class="contactPleca"></div></div>
-                <h2 class="main__h2"> <span class="main__h2--red"> Sé un héroe comunícate con nosotros y</span> sumate a nuestra lucha</h2>
-                <p>Selecciona en asunto el motivo de tu mensaje y responderemos a la brevedad. Somos Fundación Hemotuc y estamos para ayudarte.</p>
-                <div class="contact__main--marker"> <img src="./multimedia/svg/icon__marker--red.svg" alt="dirección" class="me-2"> Calle N°452 - San Miguel de Tucumán</div>
-                <div class="contact__main--phone"> <img src="./multimedia/svg/icon__phone--blue.svg" alt="dirección" class="me-2"> (0381) 4000-000 » Interno 559</div>
-              </div>
+  <!-- main -->
+  
+  <main class="contact__main d-flex justify-content-center align-content-center ">
+    <div class="row ms-5 me-5 mt-4 mb-4 align-items-center">
 
-                
-            <div class="col-lg-6 col-md-12 col-sm-12 pt-4 pb-4">
-                <div class="container_fluid">
-                    <form>
-                        <fieldset>            
-                          </div>
-                          <div class="form-group">
-                            <label for="Email">E-Mail</label>
-                            <input type="email" class="form-control form__customized " id="Email-1" aria-describedby="emailHelp" placeholder="Ingrese su mail">
-                          </div>
-                          <div class="form-group mt-3">
-                            <label for="Nombre-1">Nombre</label>
-                            <input type="text" class="form-control form__customized " id="Nombre-1  " placeholder="Ingrese su nombre y apellido">
-                          </div>
-                          <div class="form-group mt-3">
-                            <label for="Asunto-1">Asunto</label>
-                            <select class="form-control form__customized" id="Asunto-1">
-                              <option>Donación</option>
-                              <option>Sponsor</option>
-                              <option>Voluntariado</option>
-                              <option>Otro</option>
-                            </select>
-                          </div>
-                          <div class="form-group mt-3">
-                            <label for="exampleTex  tarea ">Escriba su mensaje</label>
-                            <textarea class="form-control form__customized--text" id="exampleTextarea" rows="6"></textarea>
-                          </div>
-                          </fieldset>
-                          <div class="container__btnSubmit">
-                          <button type="submit" class="nav__button mt-3">Enviar</button>
-                        </div>
-                        </fieldset>
-                      </form>
-                </div>
-            </div>
+      <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="container__contactPleca">
+          <div class="contactPleca"></div>
         </div>
-</main>
+        <h2 class="main__h2"> <span class="main__h2--red"> Sé un héroe comunícate con nosotros y</span> sumate a nuestra
+          lucha</h2>
+        <p>Selecciona en asunto el motivo de tu mensaje y responderemos a la brevedad. Somos Fundación Hemotuc y estamos
+          para ayudarte.</p>
+        <div class="contact__main--marker"> <img src="./multimedia/svg/icon__marker--red.svg" alt="dirección"
+            class="me-2"> Calle N°452 - San Miguel de Tucumán</div>
+        <div class="contact__main--phone"> <img src="./multimedia/svg/icon__phone--blue.svg" alt="dirección"
+            class="me-2"> (0381) 4000-000 » Interno 559</div>
+      </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+
+      <div class="col-lg-6 col-md-12 col-sm-12 pt-4 pb-4">
+        <div class="container_fluid">
+          <form>
+            <fieldset>
+        </div>
+        <div class="form-group">
+          <label for="Email">E-Mail</label>
+          <input type="email" class="form-control form__customized " id="Email-1" aria-describedby="emailHelp"
+            placeholder="Ingrese su mail">
+        </div>
+        <div class="form-group mt-3">
+          <label for="Nombre-1">Nombre</label>
+          <input type="text" class="form-control form__customized " id="Nombre-1  "
+            placeholder="Ingrese su nombre y apellido">
+        </div>
+        <div class="form-group mt-3">
+          <label for="Asunto-1">Asunto</label>
+          <select class="form-control form__customized" id="Asunto-1">
+            <option>Donación</option>
+            <option>Sponsor</option>
+            <option>Voluntariado</option>
+            <option>Otro</option>
+          </select>
+        </div>
+        <div class="form-group mt-3">
+          <label for="exampleTex  tarea ">Escriba su mensaje</label>
+          <textarea class="form-control form__customized--text" id="exampleTextarea" rows="6"></textarea>
+        </div>
+        </fieldset>
+        <div class="container__btnSubmit">
+          <button type="submit" class="nav__button mt-3">Enviar</button>
+        </div>
+        </fieldset>
+        </form>
+      </div>
+    </div>
+    </div>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
     integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
     integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
     crossorigin="anonymous"></script>
-   
+
 </body>
