--- a/donar.html
+++ b/donar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -26,25 +26,27 @@
     <meta name="description" content="Colaborá con nosotros y sé parte de los héroes que luchan día a día">
 
 <body>
+
+
     <!-- header -->
 
     <header class="home__header">
         <nav class="header__nav">
-          <div class="header__nav--logo">
-            <img src="./multimedia/svg/Logo_Foundation.svg" alt="Logotype">
-          </div>
-          <div class="container__nav--ul">
-            <ul class="header__nav--ul">
-              <li><a href="./index.html" class="ul__li">Home</a></li>
-              <li><a href="./nosotros.html" class="ul__li">Nosotros</a></li>
-              <li><a href="./voluntarios.html" class="ul__li">Voluntariado</a></li>
-              <li><a href="./contacto.html" class="ul__li">Contacto</a></li>
-              <li><a href="./donar.html" class="nav__button"> Donar </button> </a>
-            </ul>
-          </div>
+            <div class="header__nav--logo">
+                <img src="./multimedia/svg/Logo_Foundation.svg" alt="Logotype">
+            </div>
+            <div class="container__nav--ul">
+                <ul class="header__nav--ul">
+                    <li><a href="./index.html" class="ul__li">Home</a></li>
+                    <li><a href="./nosotros.html" class="ul__li">Nosotros</a></li>
+                    <li><a href="./voluntariado.html" class="ul__li">Voluntariado</a></li>
+                    <li><a href="./contacto.html" class="ul__li">Contacto</a></li>
+                    <li><a href="./donar.html" class="nav__button"> Donar </button> </a>
+                </ul>
+            </div>
         </nav>
     </header>
-      
+
     <!-- main -->
 
     <main class="donar__main d-flex justify-content-center align-items-center">
@@ -63,12 +65,12 @@
                         sumate a
                         nuestra lucha</h2>
                     <p>A través de mercado pago podes enviar tu donación, primero deberás llenar un formulario y luego
-                        se te enviara el link de mercado pago.      Tu donación se vera reflejada en el reporte mensual que
+                        se te enviara el link de mercado pago. Tu donación se vera reflejada en el reporte mensual que
                         se comparte con los donantes todos los meses.
                         <span class="dMain__resaltado--p"> Gracias por formar parte de esta gran familia.</span>
                     </p>
                     <div class="container__btn">
-                    <a href="./donar.html" class="donar__button">Realizar donación</a>
+                        <a href="./donar.html" class="donar__button">Realizar donación</a>
                     </div>
                 </div>
             </div>
@@ -76,29 +78,7 @@
         </div>
     </main>
 
-    <!-- 
-    <main class="contact__main d-flex justify-content-center align-content-center ">
-        <div class="row ms-5 me-5 mt-4 mb-4 align-items-center d-flex justify-content-center">
-
-            <div class="col-lg-6 col-md-12 col-sm-12 pt-4 pb-4">
-                <div class="container__imgMp">
-                    <img src="./multimedia/svg/ilust__mercadoPago.svg" alt="MercadoPago" class="img__mercadoPago">
-                </div>
-            </div>
-
-            <div class="col-lg-6 col-md-12 col-sm-12">
-                <div class="container__contactPleca">
-                    <div class="contactPleca"></div>
-                </div>
-                <h2 class="main__h2"> <span class="main__h2--red"> Sé un héroe comunícate con nosotros y</span> sumate a
-                    nuestra lucha</h2>
-                <p>Selecciona en asunto el motivo de tu mensaje y responderemos a la brevedad. Somos Fundación Hemotuc y
-                    estamos para ayudarte.</p>
-            </div>
-        </div>
-    </main> -->
-
-    <!-- footer -->
+<!-- footer -->
 
     <footer class="bottom p-4">
         <div class="container">
