Voluntariado + fixs generales

--- a/voluntariado.html
+++ b/voluntariado.html
@@ -70,21 +70,21 @@
         </div>
     </main>
 
-    <section class="mt-5">
+    <!-- section -->
 
+    <section class=" container-fluid mt-5">
         <div class="row">
             <!-- card1 -->
             <div class="mt-4 mb-4 col-lg-4 col-sm-12">
                 <div class="row justify-content-center">
                     <div class="col-12 d-flex justify-content-center">
-                        <img class="img__voluntariado--section" src="./multimedia/svg/ilust__voluntariado.svg"
-                            alt="">
+                        <img class="img__voluntariado--section" src="./multimedia/svg/ilust__voluntariado.svg" alt="">
                     </div>
                     <div class="col-12 d-flex justify-content-center mt-3">
                         <h2 class="text-center section__h2"> Voluntariado </h2>
                     </div>
                     <div class="container">
-                        <p class="card-text text-center">Ayudanos a ayudar, sumate como voluntario a la fundación.</p>
+                        <p class="card-text text-center">Ayudanos a ayudar, sumate como voluntario a la fundación</p>
                     </div>
                     <div class="container-fluid d-flex justify-content-center mt-2">
                         <a href="./donar.html" class="nav__button">+Info</a>
@@ -97,47 +97,150 @@
             <div class="mt-4 mb-4 col-lg-4 col-sm-12">
                 <div class="row justify-content-center">
                     <div class="col-12 d-flex justify-content-center">
-                        <img class="img__voluntariado--section" src="./multimedia/svg/ilust__donarSangre.svg"
-                            alt="">
+                        <img class="img__voluntariado--section" src="./multimedia/svg/ilust__donarSangre.svg" alt="">
                     </div>
                     <div class="col-12 d-flex justify-content-center mt-3">
-                        <h2 class="text-center section__h2"> Voluntariado </h2>
+                        <h2 class="text-center section__h2"> Donar sangre </h2>
                     </div>
                     <div class="container">
-                        <p class="card-text text-center">Ayudanos a ayudar, sumate como voluntario a la fundación.</p>
+                        <p class="card-text text-center">Forma parte de la campaña de donación de sangre</p>
                     </div>
                     <div class="container-fluid d-flex justify-content-center mt-2">
-                        <a href="./donar.html" class="nav__button">+Info</a>
+                        <a href="./donar.html" class="vol__buttom--yellow">+Info</a>
                     </div>
                 </div>
             </div>
 
-             <!-- card 3 -->
+            <!-- card 3 -->
 
-             <div class="mt-4 mb-4 col-lg-4 col-sm-12">
+            <div class="mt-4 mb-4 col-lg-4 col-sm-12">
                 <div class="row justify-content-center">
                     <div class="col-12 d-flex justify-content-center">
-                        <img class="img__voluntariado--section" src="./multimedia/svg/ilust__donarMedula.svg"
-                            alt="">
+                        <img class="img__voluntariado--section" src="./multimedia/svg/ilust__donarMedula.svg" alt="">
                     </div>
                     <div class="col-12 d-flex justify-content-center mt-3">
                         <h2 class="text-center section__h2"> Donar médula ósea </h2>
                     </div>
                     <div class="container">
-                        <p class="card-text text-center">Ayudanos a ayudar, sumate como voluntario a la fundación.</p>
+                        <p class="card-text text-center">Forma parte del registro de donantes de médula ósea</p>
                     </div>
                     <div class="container-fluid d-flex justify-content-center mt-2">
-                        <a href="./donar.html" class="nav__button">+Info</a>
+                        <a href="./donar.html" class="vol__buttom--blue">+ Info</a>
                     </div>
                 </div>
             </div>
         </div>
-        </div>
-
-        <div class="col-lg-4"></div>
-        <div class="col-lg-4"></div>
-        </div>
     </section>
 
+    <!-- article -->
 
-</body>
+    <article class="voluntariado__article">
+        <div class="container mt-5 mb-5 ms-5 me-5 article__container">
+            <div class="row align-items-center pt-4 pb-4 ps-4 pe-4">
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <h2 class="article__h2"> <span class="article__h2--primary"> Sé un héroe comunícate con nosotros
+                            y</span> sumate a nuestra lucha</h2>
+                    <p>Sumá tu ayuda para que podamos continuar nuestro compromiso con los que más nos necesitan.</p>
+                    <div class="container__btn">
+                        <a href="./donar.html" class="donar__button">Realizar donación</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 mt-4 mb-4">
+                    <div class="container-fluid d-flex justify-content-center">
+                        <img src="./multimedia/svg/ilust__aliados.svg" alt="" class="img__aliados">
+                    </div>
+                </div>
+
+
+                <!-- separador -->
+
+                <div class="container-fluid">
+                    <div class="row align-items-center pt-5 pb-5 ps-4 pe-4">
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <div class="separador"></div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- logos -->
+
+                <div class="container-fluid">
+                    <div class="row align-items-center pt-2 pb-2 ps-4 pe-4 d-flex justify-content-center">
+                        <div class="col-lg-2 col-md-4 col-sm-12 pt-4 pb-4 text-center d-flex justify-content-center ">
+                            <img src="./multimedia/svg/brand__Facebook.svg" alt="" class="logos">
+                        </div>
+                        <div class="col-lg-2 col-md-4 col-sm-12 pt-4 pb-4 text-center d-flex justify-content-center">
+                            <img src="./multimedia/svg/brand__CocaCola.svg" alt="" class="logos">
+                        </div>
+                        <div class="col-lg-2 col-md-4 col-sm-12 pt-4 pb-4 d-flex justify-content-center">
+                            <img src="./multimedia/svg/brand__Samsung.svg" alt="" class="logos">
+                        </div>
+                        <div class="col-lg-2 col-md-4 col-sm-12 pt-4 pb-4 text-center d-flex justify-content-center">
+                            <img src="./multimedia/svg/brand__Spotify.svg" alt="" class="logos">
+                        </div>
+                        <div class="col-lg-2 col-md-4 col-sm-12 pt-4 pb-4 text-center d-flex justify-content-center">
+                            <img src="./multimedia/svg/brand__Airtours.svg" alt="" class="logos">
+                        </div>
+                        <div class="col-lg-2 col-md-4 col-sm-12 pt-4 pb-4 text-center d-flex justify-content-center">
+                            <img src="./multimedia/svg/brand__fress.svg" alt="" class="logos">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        </div>
+    </article>
+
+
+
+    <!-- footer -->
+
+    <footer class="bottom p-4">
+        <div class="container">
+          <div class="row d-flex align-items-center">
+            <div class="col-lg-3 col-md-12 col-sm-12 footer__col--l">
+              <div class="nombreFundacion">FUNDACIÓN <span class="nombreFundacion__bold">HEMOTUC</span> </div>
+              <div class="misc__white"></div>
+              <p class=" text-white ">Fundación Hemotuc es una organización ficticia creada como proyecto final del curso
+                de front-end de CoderHouse.</p>
+              <div class="footer___socialMedia">
+                <a href="#" class="me-1"><img src="./multimedia/svg/iconFacebook.svg" alt="facebook"></a>
+                <a href="#" class="ms-1 me-1"><img src="/multimedia/svg/iconInstagram.svg" alt="instagram"></a>
+                <a href="#" class="ms-1"><img src="/multimedia/svg/iconWhatsapp.svg" alt="whatsapp"></a>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-12 col-sm-12  footer__col--ctr">
+              <div class="footer__direction d-flex">
+                <img src="./multimedia/svg/iconMapMarker.svg" alt="">
+                <div class=" text-white ms-2">Calle N°452 - San Miguel de Tucumán</div>
+              </div>
+              <div class="footer__mail d-flex">
+                <img src="./multimedia/svg/iconMail.svg" alt="">
+                <div class=" text-white ms-2">fundacionhemotuc@gmail.com</div>
+              </div>
+            </div>
+            <div class="col-lg-5 col-md-12 col-sm-12 footer__col--r">
+              <div class="container__footer--ul">
+                <ul class="footer__ul">
+                  <li><a href="">Home</a></li>
+                  <li><a href="">Nosotros</a></li>
+                  <li><a href="">Voluntariado</a></li>
+                  <li><a href="">Contacto</a></li>
+                  <li><a href="">Donar</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+  
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+        integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+        integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+        crossorigin="anonymous"></script>
+  
+    </body>
