--- a/contacto.html
+++ b/contacto.html
@@ -56,7 +56,7 @@
         <div class="container__contactPleca">
           <div class="contactPleca"></div>
         </div>
-        <h2 class="main__h2"> <span class="main__h2--red"> Sé un héroe comunícate con nosotros y</span> sumate a nuestra
+        <h2 class="article__h2"> <span class="article__h2--primary"> Sé un héroe comunícate con nosotros y</span> sumate a nuestra
           lucha</h2>
         <p>Selecciona en asunto el motivo de tu mensaje y responderemos a la brevedad. Somos Fundación Hemotuc y estamos
           para ayudarte.</p>
