--- a/donar.html
+++ b/donar.html
@@ -78,46 +78,52 @@
         </div>
     </main>
 
-<!-- footer -->
+    <!-- footer -->
 
     <footer class="bottom p-4">
         <div class="container">
-            <div class="row d-flex align-items-center">
-                <div class="col-lg-3 col-md-12 col-sm-12 footer__col--l">
-                    <div class="nombreFundacion">FUNDACIÓN <span class="nombreFundacion__bold">HEMOTUC</span> </div>
-                    <div class="misc__white"></div>
-                    <p class=" text-white ">Fundación Hemotuc es una organización ficticia creada como proyecto final
-                        del curso
-                        de front-end de CoderHouse.</p>
-                    <div class="footer___socialMedia">
-                        <a href="#" class="me-1"><img src="./multimedia/svg/iconFacebook.svg" alt="facebook"></a>
-                        <a href="#" class="ms-1 me-1"><img src="/multimedia/svg/iconInstagram.svg" alt="instagram"></a>
-                        <a href="#" class="ms-1"><img src="/multimedia/svg/iconWhatsapp.svg" alt="whatsapp"></a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12  footer__col--ctr">
-                    <div class="footer__direction d-flex">
-                        <img src="./multimedia/svg/iconMapMarker.svg" alt="">
-                        <div class=" text-white ms-2">Calle N°452 - San Miguel de Tucumán</div>
-                    </div>
-                    <div class="footer__mail d-flex">
-                        <img src="./multimedia/svg/iconMail.svg" alt="">
-                        <div class=" text-white ms-2">fundacionhemotuc@gmail.com</div>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-md-12 col-sm-12 footer__col--r">
-                    <div class="container__footer--ul">
-                        <ul class="footer__ul">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Nosotros</a></li>
-                            <li><a href="">Voluntariado</a></li>
-                            <li><a href="">Contacto</a></li>
-                            <li><a href="">Donar</a></li>
-                        </ul>
-                    </div>
-                </div>
+          <div class="row d-flex align-items-center">
+            <div class="col-lg-3 col-md-12 col-sm-12 footer__col--l">
+              <div class="nombreFundacion">FUNDACIÓN <span class="nombreFundacion__bold">HEMOTUC</span> </div>
+              <div class="misc__white"></div>
+              <p class=" text-white ">Fundación Hemotuc es una organización ficticia creada como proyecto final del curso
+                de front-end de CoderHouse.</p>
+              <div class="footer___socialMedia">
+                <a href="#" class="me-1"><img src="./multimedia/svg/iconFacebook.svg" alt="facebook"></a>
+                <a href="#" class="ms-1 me-1"><img src="/multimedia/svg/iconInstagram.svg" alt="instagram"></a>
+                <a href="#" class="ms-1"><img src="/multimedia/svg/iconWhatsapp.svg" alt="whatsapp"></a>
+              </div>
             </div>
+            <div class="col-lg-4 col-md-12 col-sm-12  footer__col--ctr">
+              <div class="footer__direction d-flex">
+                <img src="./multimedia/svg/iconMapMarker.svg" alt="">
+                <div class=" text-white ms-2">Calle N°452 - San Miguel de Tucumán</div>
+              </div>
+              <div class="footer__mail d-flex">
+                <img src="./multimedia/svg/iconMail.svg" alt="">
+                <div class=" text-white ms-2">fundacionhemotuc@gmail.com</div>
+              </div>
+            </div>
+            <div class="col-lg-5 col-md-12 col-sm-12 footer__col--r">
+              <div class="container__footer--ul">
+                <ul class="footer__ul">
+                  <li><a href="">Home</a></li>
+                  <li><a href="">Nosotros</a></li>
+                  <li><a href="">Voluntariado</a></li>
+                  <li><a href="">Contacto</a></li>
+                  <li><a href="">Donar</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-    </footer>
-
-</body>
+      </footer>
+  
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+        integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+        integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+        crossorigin="anonymous"></script>
+  
+    </body>
