Web site completo

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   <meta name="description"
     content="» Hemotuc es la Fundación para el Estudio y lucha De Enfermedades Hemato-oncológicas">
 
+    <!-- ico -->
+    <link rel="icon" href="./multimedia/img/foundation__ico.ico">
+
 </head>
 
 <body>
@@ -257,11 +260,11 @@
           <div class="col-lg-5 col-md-12 col-sm-12 footer__col--r">
             <div class="container__footer--ul">
               <ul class="footer__ul">
-                <li><a href="">Home</a></li>
-                <li><a href="">Nosotros</a></li>
-                <li><a href="">Voluntariado</a></li>
-                <li><a href="">Contacto</a></li>
-                <li><a href="">Donar</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="/nosotros.html">Nosotros</a></li>
+                <li><a href="./voluntariado.html">Voluntariado</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
+                <li><a href="./donar.html">Donar</a></li>
               </ul>
             </div>
           </div>
@@ -277,6 +280,6 @@
       crossorigin="anonymous"></script>
 
   </body>
-  
+
 
 </html>
