--- a/contacto.html
+++ b/contacto.html
@@ -26,6 +26,11 @@
   <meta name="description"
     content="Tu ayuda nos permite seguir persiguiendo sueños. Comunicate con nosotros para saber más">
 
+  <!-- ico -->
+  <link rel="icon" href="./multimedia/img/foundation__ico.ico">
+
+</head>
+
 <body>
 
   <!-- header -->
@@ -48,7 +53,7 @@
   </header>
 
   <!-- main -->
-  
+
   <main class="contact__main d-flex justify-content-center align-content-center ">
     <div class="row ms-5 me-5 mt-4 mb-4 align-items-center">
 
@@ -56,7 +61,8 @@
         <div class="container__contactPleca">
           <div class="contactPleca"></div>
         </div>
-        <h2 class="article__h2"> <span class="article__h2--primary"> Sé un héroe comunícate con nosotros y</span> sumate a nuestra
+        <h2 class="article__h2"> <span class="article__h2--primary"> Sé un héroe comunícate con nosotros y</span> sumate
+          a nuestra
           lucha</h2>
         <p>Selecciona en asunto el motivo de tu mensaje y responderemos a la brevedad. Somos Fundación Hemotuc y estamos
           para ayudarte.</p>
