--- a/contacto.html
+++ b/contacto.html
@@ -44,7 +44,7 @@
         <ul class="header__nav--ul">
           <li><a href="./index.html" class="ul__li">Home</a></li>
           <li><a href="./nosotros.html" class="ul__li">Nosotros</a></li>
-          <li><a href="./voluntariado.htmlgit" class="ul__li">Voluntariado</a></li>
+          <li><a href="./voluntariado.html" class="ul__li">Voluntariado</a></li>
           <li><a href="./contacto.html" class="ul__li">Contacto</a></li>
           <li><a href="./donar.html" class="nav__button"> Donar </button> </a>
         </ul>
